--- a/src/2_login.html
+++ b/src/2_login.html
@@ -12,16 +12,16 @@
         <form>
             <div class="mb-4">
                 <label class="block text-sm font-medium text-gray-300 mb-1">Email</label>
-                <input class="w-full px-3 py-2 bg-gray-600 border-gray-700 rounded-md text-white focus:outline-none focus:ring-2 focus:ring-blue-500" 
+                <input class="w-full px-3 py-2 bg-gray-600 border-gray-700 rounded-md text-white focus:outline-none focus:ring-2 focus:ring-blue-500 hover:ring hover:ring-gray-500 transition-all duration-300 ease-in-out"  
                 type="email" name="" placeholder="Email" id="">
             </div>
             <div class="mb-6">
                 <label class="block text-sm font-medium text-gray-300 mb-1" >Password</label>
-                <input class="w-full px-3 py-2 bg-gray-600 border-gray-700 rounded-md text-white focus:outline-none focus:ring-2 focus:ring-blue-500" 
+                <input class="w-full px-3 py-2 bg-gray-600 border-gray-700 rounded-md text-white focus:outline-none focus:ring-2 focus:ring-blue-600 hover:ring hover:ring-gray-500 transition-all duration-300 ease-in-out" 
                 type="password" name="" placeholder="Password" id="">
             </div>
             <button 
-            class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700 shadow-2xl"
+            class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700 shadow-2xl transition-all duration-300 ease-in-out"
             type="submit">Log in</button>
         </form>
     </div>
