--- a/src/6_assignments.html
+++ b/src/6_assignments.html
@@ -47,10 +47,10 @@
 
 
     <!-- Assignment 05 Create a Donut Shape Using Tailwind CSS -->
-     <div class="w-96 h-96 rounded-full bg-slate-500">
-        <!-- <div class="w-40 h-40 rounded-full bg-red-500">
-        
-        </div> -->
+     <div class="w-96 h-96 rounded-full bg-red-500 flex justify-center items-center ">
+        <div class="w-40 h-40 rounded-full bg-white p-50">
+            
+        </div>
      </div>
 </body>
 </html>
