--- a/src/6_assignments.html
+++ b/src/6_assignments.html
@@ -47,10 +47,17 @@
 
 
     <!-- Assignment 05 Create a Donut Shape Using Tailwind CSS -->
-     <div class="w-96 h-96 rounded-full bg-red-500 flex justify-center items-center ">
+     <!-- <div class="w-96 h-96 rounded-full bg-red-500 flex justify-center items-center ">
         <div class="w-40 h-40 rounded-full bg-white p-50">
             
         </div>
+     </div> -->
+
+
+
+    <!-- Assignment 06 Add Blur Effect to an Image -->
+     <div class="h-1/4 w-1/4 blur-sm hover:blur-none transition-all duration-300">
+        <img src="https://plus.unsplash.com/premium_photo-1733760124954-e9c31efbe161?q=80&w=1771&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
      </div>
 </body>
 </html>
