--- a/src/6_assignments.html
+++ b/src/6_assignments.html
@@ -56,8 +56,15 @@
 
 
     <!-- Assignment 06 Add Blur Effect to an Image -->
-     <div class="h-1/4 w-1/4 blur-sm hover:blur-none transition-all duration-300">
+     <!-- <div class="h-1/4 w-1/4 blur-sm hover:blur-none transition-all duration-300">
         <img src="https://plus.unsplash.com/premium_photo-1733760124954-e9c31efbe161?q=80&w=1771&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-     </div>
+     </div> -->
+
+
+
+    <!-- Assignment 07 Create a Gradient Colored Button Using Tailwind CSS -->
+     <div class="flex justify-center items-center h-screen">
+         <button type="submit" class="h-12 w-1/6 bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500 transition-all duration-300">Gradient Button</button>
+     </div> 
 </body>
 </html>
