--- a/src/6_assignments.html
+++ b/src/6_assignments.html
@@ -63,8 +63,16 @@
 
 
     <!-- Assignment 07 Create a Gradient Colored Button Using Tailwind CSS -->
-     <div class="flex justify-center items-center h-screen">
+     <!-- <div class="flex justify-center items-center h-screen">
          <button type="submit" class="h-12 w-1/6 bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500 transition-all duration-300">Gradient Button</button>
-     </div> 
+     </div>  -->
+
+
+
+    <!-- Assignment 08 Create a Rotating Square Box Using Tailwind CSS -->
+     <div class="w-screen h-screen flex justify-center items-center">
+        <div class="w-32 h-32 bg-blue-500 border-4 border-gray-800 animate-spin hover:animate-none">
+        </div>
+     </div>
 </body>
 </html>
