--- a/src/RazorPay/index.html
+++ b/src/RazorPay/index.html
@@ -7,6 +7,7 @@
     <link href="../output.css" rel="stylesheet">
 </head>
 <body>
+    <!-- navbar section  -->
     <nav class="bg-deepBlue">
         <div class="relative w-[1000px] mx-auto flex items-center justify-between ">    
             <!-- logo -->
@@ -75,5 +76,31 @@
             </div>
         </div>
     </nav>
+
+    <!-- Hero section  -->
+     <section class="relative bg-deepBlue">
+        <div class="w-10/12 max-w-[1080px] flex flex-row justify-between items-center mx-auto">
+            <!-- left part  -->
+            <div class="space-y-7">
+                <h1 class="font-mullish font-bold text-[40px] leading-[1.2] text-white">Power your finance, grow your business</h1>
+                <div class="w-6 h-1 bg-greenLight "></div>
+                <p class="font-mullish text-[18px] leading-7 text-white opacity-70">Accept payments from customers. Automate payouts to vendors & employees. Never run out of working capital.</p>
+
+
+                <button class="bg-lightBlue text-white py-[14px] px-[18px] rounded-md font-mullish font-bold hover:bg-lightBlue500 transition-all duration-200 ">Sign Up Now</button>
+            </div>
+            <!-- right part  -->
+            <img src="./images/hero-illustration.jpg" alt="" class="w-full max-w-[680px]">
+        </div>
+
+        <!-- shape part  -->
+        <!-- <div class="w-[100%] absolute left-0 right-0">
+            <img src="images/hero-shape.svg" alt="" class="w-full object-fill scale-x-100 max-w-[680px] ">
+        </div> -->
+        
+     </section>
+
+
+     
 </body>
 </html>
