--- a/src/RazorPay/index.html
+++ b/src/RazorPay/index.html
@@ -7,7 +7,7 @@
     <link href="../output.css" rel="stylesheet">
 </head>
 <body>
-    <!-- navbar section  -->
+        <!-- navbar section  -->
     <nav class="bg-deepBlue">
         <div class="relative w-[1000px] mx-auto flex items-center justify-between ">    
             <!-- logo -->
@@ -77,7 +77,7 @@
         </div>
     </nav>
 
-    <!-- Hero section  -->
+        <!-- Hero section  -->
      <section class="relative bg-deepBlue">
         <div class="w-10/12 max-w-[1080px] flex flex-row justify-between items-center mx-auto">
             <!-- left part  -->
@@ -94,13 +94,61 @@
         </div>
 
         <!-- shape part  -->
-        <!-- <div class="w-[100%] absolute left-0 right-0">
+        <div class="w-[100%] absolute left-0 right-0">
             <img src="images/hero-shape.svg" alt="" class="w-full object-fill scale-x-100 max-w-[680px] ">
-        </div> -->
+        </div>
         
      </section>
+        <!-- feature section  -->
+    <section class="relative mt-[150px] overflow-hidden">
+        <img src="./images/feature-section1-dottedrows.png" alt="" loading="lazy" width="150" height="130" class="absolute -top-[5rem] left-[4rem] inline-block">
 
+        <img src="./images/feature-section1-dottedrows.png" alt="" loading="lazy" width="150" height="100" class="absolute top-[20px] right-0 inline-block rotate-180">
 
-     
+        <div class="relative w-7/12 max-w-[1080px] mx-auto">
+                <!-- heading  -->
+            <h2 class="font-mullish text-center text-2xl leading-[1.2] font-extrabold">Accept Payments with Razorpay Payment Suite</h2>
+            <div class="w-6 h-1 bg-greenLight mx-auto mt-4 mb-6"></div>
+
+                <!-- content box  -->
+            <div>
+                    <!-- left section  -->
+                <div>
+                    <h3>Supercharge your business with all-powerful <span class="text-lightBlue">Payment Gateway</span>
+                    </h3> 
+                    <ul>
+                        <li>
+                            <span>100+ Payment Methods</span>
+                        </li>
+                        <li>
+                            <span>Industry leading Success Rate</span>
+                        </li>
+                        <li>
+                            <span>Superior Checkout Experience</span>
+                        </li>
+                        <li>
+                            <span>Easy to Integrate</span>
+                        </li>
+                        <li>
+                            <span>Instant Settlements from day 1</span>
+                        </li>
+                        <li>
+                            <span>In-depth Reporting and Insights</span>
+                        </li>
+                    </ul>
+
+                    <!-- for button and hyper link  -->
+                <div>
+                    <button>Sign Up Now</button>
+                    <div>
+                        <a href="">Know More</a>
+                        <i></i>
+                    </div>
+                </div>
+            </div>
+            <img src="./images/payment-suite.png" alt="">
+        </div>
+        </div>
+    </section>
 </body>
 </html>
